Allow flow cell channel to have samples from different experiments.